k8s_deployments/authelia/authelia-netpol.yml
# This Policy ensures that the pod can access only the resources it's meant to
# and is hit by traffic coming from the reverse proxy only.
# The netpol is mandatory as we'll trust headers from any IP !!
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: authelia
  namespace: authelia
spec:
  selector: app == 'authelia'
  ingress:
  - source:  # Allowing connections from the reverse proxy
      selector: app.kubernetes.io/name == 'traefik'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
    destination:
      ports:
      - authelia
    protocol: TCP
    action: Allow
  - source:  # Allowing connections from guacamole
      selector: app == 'guacamole'
      namespaceSelector: kubernetes.io/metadata.name == 'default'
    destination:
      ports:
      - authelia
    protocol: TCP
    action: Allow
  egress:
  - destination:  # Allowing connections to redis cache
      selector: app == 'redis' && instance == 'cache'
      namespaceSelector: kubernetes.io/metadata.name == 'default'
      ports:
      - redis
    protocol: TCP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: UDP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1.2.3.4/32  # mysql db
      ports:
      - 3305
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1.2.3.4/32  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1:2:3:4::5/128  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:  # Blocking connections to LAN
      selector: lan-blacklist == 'true'
    action: Deny
  - destination:  # Allowing connections to NTP servers
      ports:
      - 123
    protocol: UDP
    action: Allow
